--- a/Classification_solve_max_targets.ipynb
+++ b/Classification_solve_max_targets.ipynb
@@ -6,7 +6,8 @@
       "name": "Classification_solve_max_targets.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN/HeccL19j2kfpS8PGKav5"
+      "authorship_tag": "ABX9TyMmx/n8oFAGMGqiJqeMinnB",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/czig/afocd/blob/master/Classification_solve_max_targets.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -65,7 +76,7 @@
         "\n",
         "Above, we divide by the number of \"mandatory-qualified\" cadets for AFSC $j$ to maximize placement in AFSCs that do not have many cadets eligible (i.e. Weather, Electrical Engineering, Aeronautical Engineering).\n",
         "\n",
-        "**I do not know which objective function will be best. We should test both to see if one is more equitable, in terms of cadet allocation, than the other.**\n",
+        "**Either of these objective functions could work, but I think the new formulation, shown below in 'Formulation part 2' does a better job of distributing the cadets equitably**\n",
         "\n",
         "#### Constraints:\n",
         "1. Cadet cannot be assigned to more than one AFSC (zero is allowed): \n",
@@ -84,17 +95,59 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "rToS97JSCswm",
-        "colab_type": "code",
-        "colab": {}
+        "id": "vrTJaxy2b6a1",
+        "colab_type": "text"
       },
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "#### Formulation, part 2\n",
+        "\n",
+        "Keep the same assumptions and variables from above, but let's try to minimize the difference between the mandatory target and the number of cadets we can assign. We need an absolute value for this, and since absolute value is _only_ piecewise linear, we need to adjust the formulation to make this work in a linear program.\n",
+        "\n",
+        "For simplicity, lets define a new variable that is just derived from two others.\n",
+        "\n",
+        "> $ num_{mandatory}[j] = targets[j]*Rate_M[j] $ for $ 1 \\le j \\le m $\n",
+        "\n",
+        "#### Objective Function\n",
+        "\n",
+        "Let $Y$ be $ 1 \\times m $ matrix of decision variables, $y_j$, where $y_j$ denotes the absolute difference in 'mandatory-qualified' cadets assigned an AFSC and the mandatory requirement\n",
+        "\n",
+        "> $min \\sum_{j=1}^{m} Y[j]  $\n",
+        "\n",
+        "#### Implicit variable\n",
+        "\n",
+        "SAS let's us do this thing called creating implicit variables, and basically, it lets us write up an equation that gets \"stored\" in a variable. However, I don't know much more than that.\n",
+        "\n",
+        "> $ X_{eqn}[j] = \\big(\\sum_{i=1}^{n} Tier_M[i,j]*X[i,j]\\big) - num_{mandatory}[j] $, for $ 1 \\le j \\le m $\n",
+        "\n",
+        "#### Constraints\n",
+        "\n",
+        "1. Absolute value constraint\n",
+        "\n",
+        "> $ Y[j] \\ge -X_{eqn}[j] $, for $ 1 \\le j \\le m $\n",
+        "\n",
+        "2. Absolute value constraint #2\n",
+        "\n",
+        "> $ Y[j] \\ge X_{eqn}[j] $, for $ 1 \\le j \\le m $\n",
+        "\n",
+        "3. Force $x_{ij}$ to be binary decision variable: \n",
+        "\n",
+        "> $ X[i,j] \\in \\{0,1\\} $, for $1 \\le i \\le n, 1 \\le j \\le m$\n",
+        "\n",
+        "4. Cadet cannot be assigned to more than one AFSC (zero is allowed): \n",
+        "\n",
+        "> $\\sum_{j=1}^m X[i,j] \\le 1$, for $1 \\le i \\le n$\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
     }
   ]
 }
