--- a/Classification_solve_max_targets.ipynb
+++ b/Classification_solve_max_targets.ipynb
@@ -6,7 +6,7 @@
       "name": "Classification_solve_max_targets.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMmx/n8oFAGMGqiJqeMinnB",
+      "authorship_tag": "ABX9TyMO5vIYnQ0KXP/YaqhFBld2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -119,7 +119,7 @@
         "\n",
         "SAS let's us do this thing called creating implicit variables, and basically, it lets us write up an equation that gets \"stored\" in a variable. However, I don't know much more than that.\n",
         "\n",
-        "> $ X_{eqn}[j] = \\big(\\sum_{i=1}^{n} Tier_M[i,j]*X[i,j]\\big) - num_{mandatory}[j] $, for $ 1 \\le j \\le m $\n",
+        "> $ X_{eqn}[j] = \\dfrac{\\big(\\sum_{i=1}^{n} Tier_M[i,j]*X[i,j]\\big) - num_{mandatory}[j]}{num_{mandatory}[j]} $, for $ 1 \\le j \\le m $\n",
         "\n",
         "#### Constraints\n",
         "\n",
